# retail-epcpy

./: .gitignore  LICENSE  README.md  README_pip.md  pyproject.toml  scripts.py
epcpy/: __init__.py
epcpy/digital_links/: model.py  regex.py  retrieve_properties.py  semantic_extraction.py  validation.py
epcpy/epc_classes/: lgtin.py
epcpy/epc_pure_identities/: adi.py  bic.py  cpi.py  gdti.py  giai.py  gid.py  ginc.py  grai.py  gsin.py  gsrn.py  gsrnp.py  imovn.py  itip.py  pgln.py  sgcn.py  sgln.py  sgtin.py  sscc.py  upui.py  usdod.py
epcpy/epc_schemes/: __init__.py  adi.py  base_scheme.py  bic.py  cpi.py  gdti.py  giai.py  gid.py  ginc.py  grai.py  gsin.py  gsrn.py  gsrnp.py  imovn.py  itip.py  lgtin.py  pgln.py  sgcn.py  sgln.py  sgtin.py  sscc.py  upui.py  usdod.py
epcpy/utils/: common.py  converters.py  parsers.py  regex.py
notebooks/: gs1_converters.ipynb
src/: base_scheme.py  common.py  converters.py  decoding.py  gs1_converters.ipynb  parsers.py  regex.py
src/schemes/: adi.py  bic.py  cpi.py  gdti.py  giai.py  gid.py  ginc.py  grai.py  gsin.py  gsrn.py  gsrnp.py  imovn.py  itip.py  pgln.py  sgcn.py  sgln.py  sgtin.py  sscc.py  upui.py  usdod.py
tests/epc_pure_identities/: test_adi.py  test_base_scheme.py  test_bic.py  test_cpi.py  test_gdti.py  test_giai.py  test_gid.py  test_ginc.py  test_grai.py  test_gsin.py  test_gsrn.py  test_gsrnp.py  test_imovn.py  test_itip.py  test_lgtin.py  test_pgln.py  test_sgcn.py  test_sgln.py  test_sgtin.py  test_sscc.py  test_upui.py  test_usdod.py
tests/epc_schemes/: test_adi.py  test_base_scheme.py  test_bic.py  test_cpi.py  test_gdti.py  test_giai.py  test_gid.py  test_ginc.py  test_grai.py  test_gsin.py  test_gsrn.py  test_gsrnp.py  test_imovn.py  test_itip.py  test_lgtin.py  test_pgln.py  test_sgcn.py  test_sgln.py  test_sgtin.py  test_sscc.py  test_upui.py  test_usdod.py
tests/utils/: test_data.py  test_parsers.py
